--- a/index.html
+++ b/index.html
@@ -211,13 +211,13 @@
         <main id="content"> 
             <section id="home" class="page hidden max-w-3xl mx-auto">
                 <div class="bg-white p-4 sm:p-6 rounded-xl shadow-md">
-                    <h2 class="text-xl sm:text-2xl font-semibold mb-3 text-secondary">Reintroduction Progress</h2>
+                    <h2 class="text-xl sm:text-2xl font-semibold mb-3 text-secondary">📈 Reintroduction Progress</h2>
                     <div id="progress-summary" class="space-y-2"> 
                     </div>
                 </div>
                  <div class="bg-white p-4 sm:p-6 rounded-xl shadow-md">
                     <h2 class="text-xl sm:text-2xl font-semibold mb-3 text-secondary flex items-center">
-                        <i class="fas fa-magic-sparkles text-warning mr-2"></i> AI Insights
+                        <i class="fas fa-magic-sparkles text-warning mr-2"></i> 💡 AI Insights
                     </h2>
                     <div class="space-y-3"> 
                         <button id="summarize-journey-btn" class="w-full bg-primary text-white font-semibold py-2.5 px-4 rounded-lg hover:bg-primary-dark transition-colors duration-300 shadow flex items-center justify-center gap-2"> 
@@ -267,7 +267,7 @@
 
             <section id="reintroduction-log" class="page hidden">
                 <div id="add-log-entry-wrapper" class="bg-white p-4 sm:p-6 rounded-xl shadow-md mb-4 max-w-3xl mx-auto"> 
-                    <h2 class="text-xl sm:text-2xl font-semibold mb-3 text-secondary">Add Log Entry</h2>
+                    <h2 class="text-xl sm:text-2xl font-semibold mb-3 text-secondary">✏️ Add Log Entry</h2>
                     <form id="log-form" class="space-y-3"> 
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-3"> 
                             <input type="date" id="log-date" class="w-full p-2.5 border border-slate-300 rounded-lg" required> 
