Change all Font Awesome icons to emojis in headers

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
             <section id="food-info" class="page hidden max-w-3xl mx-auto">
                 <div class="bg-white p-4 sm:p-6 rounded-xl shadow-md">
-                    <h2 class="text-xl sm:text-2xl font-semibold mb-3 text-secondary flex items-center"><i class="fas fa-brain text-accent mr-2"></i>AI Food Assistant</h2>
+                    <h2 class="text-xl sm:text-2xl font-semibold mb-3 text-secondary flex items-center">🧠 AI Food Assistant</h2>
                      <p class="text-subtle mb-3 text-sm">Get instant FODMAP info for any food or ingredient list based on your profile. This is not medical advice.</p>
                     
                     <div class="flex gap-2 mb-3">
@@ -327,7 +327,7 @@
             
             <section id="profile" class="page hidden max-w-3xl mx-auto">
                  <div class="bg-white p-4 sm:p-6 rounded-xl shadow-md">
-                    <h2 class="text-xl sm:text-2xl font-semibold mb-3 text-secondary flex items-center"><i class="fas fa-user-edit text-primary mr-2"></i>Personalize Your Profile</h2>
+                    <h2 class="text-xl sm:text-2xl font-semibold mb-3 text-secondary flex items-center">👤 Personalize Your Profile</h2>
                     <p class="text-subtle mb-4 text-sm">Your selections here will customize the AI Assistant's advice to your specific needs.</p> 
 
                     <form id="profile-form" class="space-y-4">
