--- a/index.html
+++ b/index.html
@@ -89,7 +89,29 @@
         @keyframes shimmer-animation {
             0% { left: -150%; }
             100% { left: 150%; }
-        }    
+        }
+        
+        /* New Text Loader for Modals */
+        .modal-loader-text {
+            font-size: 1.125rem; /* text-lg */
+            font-weight: 600;
+            color: var(--color-text-muted);
+            text-align: center;
+        }
+        .modal-loader-text .dot {
+            animation: modal-dot-blink 1.4s infinite;
+            animation-fill-mode: both;
+        }
+        .modal-loader-text .dot:nth-child(2) {
+            animation-delay: 0.2s;
+        }
+        .modal-loader-text .dot:nth-child(3) {
+            animation-delay: 0.4s;
+        }
+        @keyframes modal-dot-blink {
+            0%, 80%, 100% { opacity: 0; }
+            40% { opacity: 1; }
+        }
 
         .log-item-body, .progress-item-body {
             max-height: 0;
@@ -813,7 +835,11 @@
                     <button id="gemini-modal-close" class="text-slate-400 hover:text-slate-600 text-2xl">&times;</button>
                 </div>
                 <div class="p-4 max-h-[60vh] overflow-y-auto"> 
-                    <div id="gemini-modal-loader" class="flex justify-center items-center py-8"><div class="loader"></div></div> 
+                    <div id="gemini-modal-loader" class="flex justify-center items-center py-8">
+                        <div class="modal-loader-text">
+                            Thinking, hold tight<span class="dot">.</span><span class="dot">.</span><span class="dot">.</span>
+                        </div>
+                    </div> 
                     <div id="gemini-modal-content" class="text-secondary leading-relaxed hidden text-sm"></div> 
                     <div id="gemini-modal-error" class="text-error bg-red-50 p-3 rounded-lg hidden text-sm"></div> 
                 </div>
