Added the "Install app" button to the menu

--- a/index.html
+++ b/index.html
@@ -923,6 +923,11 @@
                             <i class="fas fa-book-open w-5 mr-2 text-primary"></i>Understand FODMAPS
                         </button>
                     </li>
+                    <li id="install-app-li" style="display: none;">
+                        <button id="install-app-btn" class="w-full text-left py-2.5 px-3 rounded-full hover:bg-slate-100 text-secondary font-medium text-sm">
+                            <i class="fas fa-download w-5 mr-2 text-primary"></i>Install App
+                        </button>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -935,6 +940,10 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
+
+            let deferredPrompt; // This will store the event for later use
+            const installAppLi = document.getElementById('install-app-li');
+            const installAppBtn = document.getElementById('install-app-btn');
 
              const FODMAP_GROUP_DATA = [ { value: "Fructose", name: "Fructose", examples: "(e.g., Honey, Mango)" }, { value: "Lactose", name: "Lactose", examples: "(e.g., Milk, Yogurt)" }, { value: "Fructans (Grains)", name: "Fructans - Grains", examples: "(e.g., Wheat, Rye)" }, { value: "Fructans (Veg & Fruit)", name: "Fructans - Veg & Fruit", examples: "(e.g., Onion, Garlic)" }, { value: "GOS", name: "Galactans (GOS)", examples: "(e.g., Beans, Lentils)" }, { value: "Polyols (Sorbitol)", name: "Polyols - Sorbitol", examples: "(e.g., Avocado, Blackberry)" }, { value: "Polyols (Mannitol)", name: "Polyols - Mannitol", examples: "(e.g., Cauliflower, Mushroom)" } ];
              const FODMAP_STYLES = { "Fructose": { color: "bg-yellow-100 text-yellow-800", icon: "🍎" }, "Lactose": { color: "bg-blue-100 text-blue-800", icon: "🥛" }, "Fructans (Grains)": { color: "bg-orange-100 text-orange-800", icon: "🍞" }, "Fructans (Veg & Fruit)": { color: "bg-purple-100 text-purple-800", icon: "🧅" }, "GOS": { color: "bg-teal-100 text-teal-800", icon: "🫘" }, "Polyols (Sorbitol)": { color: "bg-green-100 text-green-800", icon: "🥑" }, "Polyols (Mannitol)": { color: "bg-indigo-100 text-indigo-800", icon: "🍄" } };
@@ -1776,6 +1785,61 @@ Use this exact template:
                     geminiError.classList.remove('hidden'); 
                 }
             });
+
+            // Listen for the beforeinstallprompt event
+            window.addEventListener('beforeinstallprompt', (e) => {
+                // Prevent the default browser prompt from appearing
+                e.preventDefault();
+                // Stash the event so it can be triggered later.
+                deferredPrompt = e;
+                // Show our custom install button in the menu
+                if (installAppLi) {
+                    installAppLi.style.display = 'block'; // Make the list item visible
+                }
+            });
+
+            // Add click listener to our custom install button
+            if (installAppBtn) {
+                installAppBtn.addEventListener('click', () => {
+                    // Hide the button in the menu
+                    if (installAppLi) {
+                        installAppLi.style.display = 'none';
+                    }
+                    // Show the browser's installation prompt
+                    if (deferredPrompt) {
+                        deferredPrompt.prompt();
+                        // Wait for the user to respond to the prompt
+                        deferredPrompt.userChoice.then((choiceResult) => {
+                            if (choiceResult.outcome === 'accepted') {
+                                console.log('User accepted the install prompt');
+                            } else {
+                                console.log('User dismissed the install prompt');
+                            }
+                            // Clear the deferredPrompt variable, as it can only be used once
+                            deferredPrompt = null;
+                        });
+                    }
+                    // Close the side menu after clicking
+                    closeSide();
+                });
+            }
+
+            // Listen for the 'appinstalled' event to know when the user has successfully installed
+            window.addEventListener('appinstalled', () => {
+                console.log('PWA was successfully installed!');
+                // Hide the button if the app is installed
+                if (installAppLi) {
+                    installAppLi.style.display = 'none';
+                }
+                deferredPrompt = null;
+            });
+
+            // Hide the button if the app is already running in standalone mode
+            if (window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone) {
+                if (installAppLi) {
+                    installAppLi.style.display = 'none';
+                }
+            }
 
             // Dynamically set nav top and body padding
             const calculatePadding = () => { 
