Corrected text "These foods"

--- a/index.html
+++ b/index.html
@@ -1758,7 +1758,7 @@ Do NOT use '###', '|', or tables. Omit the disclaimer.
 
 Use this exact template:
 **Foods:** [Food Names]
-*Why this foods?:* [Brief explanation]
+*Why these foods?:* [Brief explanation]
 
 **Challenge Plan:**
 - **Day 1:** [Portion]
